JS - implementata iniezione div via append() in html -

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body{
 
           .square{
             flex-basis: calc(100% / 8);
-            height: calc(100% / 8);
+            border: 1px solid gray;
           }
 
           .red{
