--- a/css/style.css
+++ b/css/style.css
@@ -59,19 +59,22 @@ body{
 
           .square{
             flex-basis: calc(100% / 8);
-            border: 1px solid gray;
+            border: 1px solid lightgray;
           }
-
+          
+          /* questa gestione di .red .green ed .active è necessaria a tenere distinti border e background color */
           .red{
-            background-color: red;
-            /* opacity: 1; */
+            background-color: rgba(255, 0, 0, 0);
           }
 
           .green{
-            background-color: green;
-            /* opacity: 1; */
+            background-color: rgba(0, 255, 0, 0);
           }
 
-          .active{
-            opacity: 0;
+          .red.active{
+            background-color: rgba(255, 0, 0, 1);
+          }
+
+          .green.active{
+            background-color: rgba(0, 255, 0, 1);
           }
